--- a/omx/image/src/openmax_il/jpeg_enc/src/Makefile
+++ b/omx/image/src/openmax_il/jpeg_enc/src/Makefile
@@ -26,7 +26,7 @@ ifeq ($(OMX_DEBUG), 1)
 endif
 
 OMXCORE_LIB=$(OMXLIBDIR)/libOMX_Core.so
-COMPONENT_LIB=libOMX.TI.JPEG.encoder.so
+COMPONENT_LIB=libOMX.TI.JPEG.Encoder.so
 
 COMPONENT_TARGET=$(OMXLIBDIR)/$(COMPONENT_LIB)
 
